sonarlint polish